<!--
  ~ Copyright (c) 2022. Bernard Bou
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="org.sqlunet.download.UpdateActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:orientation="vertical"
		android:paddingStart="@dimen/activity_horizontal_padding"
		android:paddingEnd="@dimen/activity_horizontal_padding"
		tools:ignore="UselessParent">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/download_up"
			android:src="@drawable/ic_download_source"
			app:tint="?android:attr/colorForeground" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/download_up"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/up_src"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/up_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/up_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/up_etag"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/up_version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/up_static_version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:contentDescription="@string/download_down"
			android:gravity="start"
			android:src="@drawable/ic_download_dest"
			app:tint="?android:attr/colorForeground" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawablePadding="10dp"
			android:text="@string/download_down"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/down_model"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_model_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_model_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source_etag"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source_version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/down_source_static_version"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<TextView
			android:id="@+id/newer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/status_state_unknown" />

		<ImageButton
			android:id="@+id/update"
			style="@style/ActionButton"
			android:layout_width="64dp"
			android:layout_height="64dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:background="@drawable/bg_button_action"
			android:contentDescription="@string/action_update"
			android:padding="5dp"
			android:src="@drawable/bn_download"
			android:visibility="invisible" />

	</LinearLayout>

</RelativeLayout>
